@@ -48,6 +48,11 @@ behind a firewall.
 .B \-s, \-\-source
 Query on source packages, rather than binary packages.
 .TP
+.B \-u, \-\-ui
+Specify the user interface to use.
+Valid options are \fBtext\fP, \fBnewt\fP, \fBurwid\fP, \fBgtk2\fP;
+default is taken from the reportbug configuration files.
+.TP
 .B \-w, \-\-web
 Launch a web browser to view bug reports, instead of using the
 internal interface.  This will also allow you to see all of the
