@@ -403,6 +403,11 @@ ignore any tags specified on the command line.
 .B \-\-template
 Output a template report to standard output.
 .TP
+.B \-u, \-\-ui
+Specify the user interface to use.
+Valid options are \fBtext\fP, \fBnewt\fP, \fBurwid\fP, \fBgtk2\fP;
+default is taken from the reportbug configuration files.
+.TP
 .B \-v, \-\-verify
 Verify the integrity of the package (if installed) using debsums
 before reporting.
