@@ -235,7 +235,7 @@ Use \fIsubmit\fP as the bug submission address
 Use the template mode, bypasses all prompts and the output it sent to
 stdout
 .TP
-.B ui [\fItext\fP|\fInewt\fP]
+.B ui [\fItext\fP|\fInewt\fP|\fIurwid\fP|\fIgtk2\fP]
 The user interface that
 .B querybts(1)
 and
